Macro/skim/logs/19545448_11.err
input_line_9:2:37: error: expected expression
 FlatMix(11*100000, (11+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                    ^
